--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "PRISMA_FORCE_NAPI=true next dev",
+    "dev": "PRISMA_FORCE_NAPI=true npx prisma generate && next dev",
     "build": "PRISMA_FORCE_NAPI=true npx prisma generate && NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
